@@ -1,44 +1,41 @@
 #!/usr/bin/env python
 
 from libschedule import *
+import itertools
 
 events = parse_file ("2.22.schedule")
-#for i in events:
-#    print "date: %s, cat: %s, %s" % (str (i.date), i.category, i.event)
-
-current_month = None
-current_month_str = None
-current_rel_week = None
-
-stacked_events = []
 
 print "||<:> '''Week''' ||<:> '''Date''' || '''Task''' || '''Notes''' ||"
 
-for event in events:
-    if event.date.month != current_month:
-        current_month = event.date.month
-        current_month_str = event.date.strftime ("%B")
-        print "||<-4 rowbgcolor=\"#dddddd\"> '''%s''' ||" % current_month_str
+cat_task = set(('release', 'tarball'))
+by_month = lambda val: val.date.month
+by_week = lambda val: val.rel_week
+by_date = lambda val: val.date.day
 
-    if current_rel_week == None:
-        current_rel_week = event.rel_week
-        stacked_events.append (event)
-        continue
+for month, events_month in itertools.groupby(events, by_month):
+    events = list(events_month)
 
-    if event.rel_week == current_rel_week:
-        stacked_events.append (event)
-        continue
+    month_str = events[0].date.strftime ("%B")
+    print "||<-4 rowbgcolor=\"#dddddd\"> '''%s''' ||" % month_str
 
-    # print events for the previous relative week
-    if len (stacked_events) == 1:
-        print "||<: #9db8d2> '''%d''' " % (current_rel_week)
-    else:
-        print "||<|%d : #9db8d2> '''%d''' " % (len (stacked_events), current_rel_week)
+    for week, events_week in itertools.groupby(events, by_week):
+        events = list(events_week)
+        rel_week_str = events[0].rel_week
 
-    print "||<: #c5d2c8> October 15"
+        dates = list([(key, list(items)) for key, items in itertools.groupby(events, by_date)])
+
+        print "||<|%d : #9db8d2> '''%d''' " % (len (dates), rel_week_str),
+        for date, items in dates:
+            date_str = items[0].date.strftime("%b %d")
+            print "||<: #c5d2c8> %s" % date_str,
 
 
-    # now continue with the new event
-    current_rel_week = event.rel_week
-    stacked_events = []
-    stacked_events.append (event)
+            task_items = [item for item in items if item.category in cat_task]
+            note_items = [item for item in items if item.category not in cat_task]
+
+            print "|| ", "[[BR]]".join([i.wiki_text() for i in task_items]),
+            print "|| ", "[[BR]]".join([i.wiki_text() for i in note_items]),
+
+            print "||"
+
+
